added working timer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   english_words: ^4.0.0
   firebase_core: ^1.15.0
   firebase_database: ^9.0.12
+  flutter_countdown_timer: ^4.1.0
 # #enddocregion dependencies
 
 dev_dependencies:
