--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   firebase_core: ^1.15.0
