--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_map:
+  location: ^4.4.0
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   firebase_core: ^1.15.0
