--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_database: ^9.0.12
   flutter_countdown_timer: ^4.1.0
   http: ^0.13.4
+  shared_preferences: ^2.0.15
 # #enddocregion dependencies
 
 dev_dependencies:
